--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,15 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
-.centered {
-  margin: auto;
+.digits__section-title {
+  margin: 0 0 20px;
 }
 
-.space_bottom {
-  margin-bottom: 20px;
-}
-
-.list {
-  padding: 0;
-  list-style: none;
+.kaufman__section-title {
+  margin: 0 0 20px;
 }
 
 .header {
@@ -35,16 +30,16 @@
 }
 
 .logo {
-  height: 32px;
   width: 183px;
   z-index: 1;
 }
 
 .logo_place_header {
+  height: 32px;
   position: absolute;
   top: 30px;
   left: 64px;
-  background-image: url(../images/logo_place_header.svg);
+  background-image: url('../images/logo_place_header.svg');
   background-size: cover;
 }
 
@@ -66,6 +61,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
 .header__link {
@@ -129,11 +125,11 @@
 }
 
 .two-columns__paragraph {
-  margin: 0;
+  margin: 0 0 30px;
 }
 
-.two-columns__paragraph:nth-of-type(2) {
-  margin: 20px 0;
+.two-columns__paragraph:last-child {
+  margin: 0;
 }
 
 .two-columns__span-accent {
@@ -142,6 +138,10 @@
 
 .digits {
   padding: 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .section-title {
@@ -158,6 +158,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin: 0;
 }
 
 .table {
@@ -166,6 +167,8 @@
   align-items: stretch;
   flex-wrap: wrap;
   width: 1100px;
+  padding: 0;
+  list-style: none;
 }
 
 .table__cell {
@@ -181,10 +184,14 @@
 }
 
 .table__text {
-  margin: 0;
+  margin: 0 0 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+}
+
+.table__text:last-child {
+  margin: 0;
 }
 
 .table__span-autor {
@@ -194,10 +201,12 @@
 
 .feynman {
   position: relative;
-  background: bottom left url(../images/feynman.png) no-repeat #f2f2f2;
+  background: bottom left url('../images/feynman.png') no-repeat #f2f2f2;
   height: 790px;
-  box-sizing: border-box;
-  padding: 100px 0;
+  padding: 100px 0 0;
+  /*box-sizing: border-box;*/
+  /*Если убрать box-sizing высота блока 890px = 790px + 100px padding,
+  в брифе указана высота блока 790px */
 }
 
 .feynman__title {
@@ -239,6 +248,10 @@
   padding: 90px 0;
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .section-title_theme_dark {
@@ -261,6 +274,8 @@
 }
 
 .kaufman__triangle {
+  background-image: url('../images/kaufman-triangle.svg');
+  background-size: cover;
   height: 877px;
   width: 877px;
   position: absolute;
@@ -273,19 +288,24 @@
   padding: 60px 0 40px;
   background-color: #1f1f1f;
   min-height: 350px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 .logo_place_footer {
-  background-image: url(../images/logo_place_footer.svg);
+  height: 35px;
+  background-image: url('../images/logo_place_footer.svg');
   background-size: cover;
 }
 
 .footer__columns {
+  margin: 0 auto;
   width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  flex-basis: 711px;
+
 }
 
 .footer__column_content_copyright {
@@ -293,7 +313,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  width: 50%;
+  flex-basis: 711px;
 }
 
 .footer__author {
@@ -314,9 +334,11 @@
 
 .footer__column-links {
   margin: 20px 0 18px;
+  padding: 0;
+  list-style: none;
 }
 
-.footer__column_link {
+.footer__column-link {
   color: white;
   text-decoration: none;
   line-height: 30px;
