--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
   position: relative;
-  background: bottom left url('/images/feynman.png') no-repeat #f2f2f2;
+  background: bottom left url('../../images/feynman.png') no-repeat #f2f2f2;
   height: 790px;
   padding: 80px 0 0;
 }
