--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,7 +1,9 @@
 .resources__logo-zone {
   width: 1100px;
-  margin-top: 80px;
+  margin: 80px 0 0;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 0;
+  list-style-type: none;
 }
