--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,7 +1,5 @@
 .resources__logo {
   width: 270px;
   height: 38px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+  text-align: center;
 }
