--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
+@import url(../vendor/normalize.css);
+
 @import url(../blocks/page/page.css);
-@import url(../blocks/page/__techniques/page__techniques.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__title/header__title.css);
@@ -21,6 +22,8 @@
 @import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
 @import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+
+@import url(../blocks/content/__techniques/content__techniques.css);
 
 @import url(../blocks/techiques/techniques.css);
 @import url(../blocks/techiques/__section-title/techniques__section-title.css);
@@ -45,7 +48,7 @@
 @import url(../blocks/section-title/_theme/section-title__theme_dark.css);
 
 @import url(../blocks/section-subtitle/section-subtitle.css);
-@import url(../blocks/section-subtitle/_theme/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 
 @import url(../blocks/table/table.css);
 @import url(../blocks/table/__cell/table__cell.css);
@@ -78,10 +81,8 @@
 @import url(../blocks/resources/__section-title/resources__section-title.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
 @import url(../blocks/resources/__logo/resources__logo.css);
-@import url(../blocks/resources/__logo/_type/resources__logo_type_arzamas.css);
-@import url(../blocks/resources/__logo/_type/resources__logo_type_nplusodin.css);
-@import url(../blocks/resources/__logo/_type/resources__logo_type_strelka.css);
-@import url(../blocks/resources/__logo/_type/resources__logo_type_polka.css);
+@import url(../blocks/resources/__img/resources__img.css);
+
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
